--- a/client/src/styles/work.css
+++ b/client/src/styles/work.css
@@ -1,38 +1,36 @@
-
-.work-parent-container #text{
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-size: x-large;
-    border: 1px solid red;
-    width: fit-content;
-}
-.work-parent-container .parent{
-    border: 2px solid black;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+.work-parent{
+    width: 30vw;
+    border: 1px solid rgba(243, 217, 217,.5);
+    height: 100vh;
+    border-radius:25px;
+    background-color: rgba(243, 217, 217,.5);
+    overflow-y: scroll;
+    overflow-x:hidden;
 }
 
-
-#work-container{
-    border: 1px solid rgb(94, 222, 55);
-    border-radius: 10px;
-    width: 180px;
-    height: 200px;
-    background-color: #e5e775;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+#work-header{
+    color: #D09292;
+    font-weight: 400;
+    font-size: 48px;
+    position: relative;
+    left: 25%;
+    top: -20px;
+}
+.projects{
+    border: 1px solid #FC6F6F;
+    border-radius: 25px;
+    margin: 20px;
+    background-color: #FFFFFF28;
+    padding: 5px;
 }
 
-#work-container img{
-    border: 1px solid red;
-    height: 100px;
-    weight: 100px
+.projects #title,#desc{
+    color: #D09292;
 }
 
-#work-container #title{
-    font-size: medium;
-    font-weight: 600;
-  
+#external-link>a{
+    font-style: none;
+    color: rgb(203, 82, 48);
+    text-decoration: none;
+    margin: 5px;
 }
